--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@
   position: relative;
   left: 50%;
   transform: translate(-50%, 0%);
-  padding: 10px 0px 10px 0px;
   max-width: 1040px;
   overflow: auto;
   background: #FBE6E6 !important;
 }
 
 #outdated > h6 {
-  margin: 0px;
+  margin: 10px 0px 10px 0px;
   font-size: 1em;
+  overflow: auto;
 }
 
 #outdated > h6 > div {
@@ -37,9 +37,9 @@
   background: #DB3434;
   color: #FFF;
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
+  width: 38px;
+  height: 38px;
+  line-height: 38px;
   text-align: center;
   margin-right: 10px;
 }
@@ -57,10 +57,6 @@
 }
 
 #outdated > p {
-  display: none;
-}
-
-#outdated .last {
   display: none;
 }
 
