--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   left: 0px;
   width: 100%;
   background: #FBE6E6;
-  font-size: 14px;
 }
 
 #outdated {
@@ -20,6 +19,8 @@
 #outdated > h6 {
   padding: 5px;
   overflow: auto;
+  margin: 0px;
+  font-size: 14px;
 }
 
 #outdated > h6 > div {
