--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
   height: 30px;
   line-height: 30px;
   text-align: center;
-  margin-right: 10px;
+  margin: 2px 10px 2px 0px;
 }
 
 #outdated > h6 .icon:before {
