--- a/style.css
+++ b/style.css
@@ -24,24 +24,20 @@
 }
 
 #outdated > h6 > div {
-  float: left;
   color: #333;
 }
 
-#outdated > h6 > #outdated_title {
-  font-weight: bold;
-}
-
 #outdated > h6 .icon {
+  float: left;
   font-family: vlaanderen_iconfont;
   background: #DB3434;
   color: #FFF;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
   text-align: center;
-  margin: 2px 10px 2px 0px;
+  margin: 2px 8px 2px 0px;
 }
 
 #outdated > h6 .icon:before {
@@ -54,6 +50,14 @@
 
 #outdated > h6 div {
   font-weight: normal;
+}
+
+#outdated > h6 > #outdated_container {
+  overflow: auto;
+}
+
+#outdated > h6 > #outdated_title {
+  font-weight: bold;
 }
 
 #outdated > p {
